--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
       - run:
           name: Build front-end
           command: |
+            cd frontend
             npm run build
             exit 1
       - save_cache:
