--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,8 @@ jobs:
           name: Build front-end
           command: |
             cd frontend
+            ls -l
+            npm install
             npm run build
             exit 1
       - save_cache:
