--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,7 @@ jobs:
           name: Frontend Test
           command: |
             cd frontend
+            npm install
             npm test
                 
   test-backend:
@@ -92,6 +93,7 @@ jobs:
           name: Backend Test
           command: |
             cd backend
+            npm install
             npm test
             
 #   scan-frontend:
