Test infra deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,8 +109,7 @@ jobs:
             npm audit --audit-level=critical
 
   scan-backend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *defaults
     steps:
       - checkout
       - restore_cache:
