--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,8 +154,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       - run: return 1
-      - destroy_environment
-        when: on_fail   
+      - destroy_environment:
+          when: on_fail   
 
 #   configure-infrastructure:
 #     docker:
