--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,9 +153,9 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - run: return 1
-      - destroy_environment:
-          when: on_fail   
+      # - run: return 1
+      # - destroy-environment:
+      #     when: on_fail   
 
 #   configure-infrastructure:
 #     docker:
