--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ jobs:
       - run:
           name: Add utils
           command: |
-            yum -y groupinstall "Development Tools"
+            yum -y install tar
       - run:
           name: Ensure back-end infrastructure exists
           command: |
@@ -168,6 +168,10 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - run:
+          name: Add utils
+          command: |
+            yum -y install tar
       - add_ssh_keys:
           fingerprints: ["31:7d:61:29:9e:01:a6:b0:ab:50:9e:aa:87:7a:25:e6"]
       - attach_workspace:
