persist to workspace 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,9 +155,9 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text >> inventory.txt
       - persist_to_workspace:
-          root: ansible
+          root: .circleci/ansible
           paths:
-            - .circleci/ansible/inventory.txt
+            - inventory.txt
       # - run:
       #     command: |
       #       echo "I will fail with exit status"
@@ -177,7 +177,7 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["31:7d:61:29:9e:01:a6:b0:ab:50:9e:aa:87:7a:25:e6"]
       - attach_workspace:
-          at: /tmp/ansible
+          at: /tmp/.circleci/ansible
       - run:
           name: Install dependencies
           command: |
@@ -188,11 +188,11 @@ jobs:
           name: Checkout ws
           command: |
             ls -l
-            cat /tmp/workspace/project/.circleci/ansible/inventory.txt
+            cat /tmp/workspace/inventory.txt
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i /tmp/ansible/inventory.txt .circleci/ansible/configure-server.yml
+            ansible-playbook -i /tmp/.circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
       - destroy-environment
       # Here's where you will add some code to rollback on failure      
 
