--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,22 +196,24 @@ jobs:
       - destroy-environment
       # Here's where you will add some code to rollback on failure      
 
-#   run-migrations:
-#     docker:
-#       # Docker image here that supports NodeJS
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Run migrations
-#           command: |
-#             # Your code here
-#             exit 1
-#       - run:
-#           name: Send migration results to memstash
-#           command: |
-#             # Your code here
-#             exit 1
-#      # Here's where you will add some code to rollback on failure      
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm run premigrations
+            npm run migrations
+            npm run migrations-win
+      - run:
+          name: Send migration results to memstash
+          command: |
+            # Your code here
+            exit 1
+      - destroy-environment
 
 #   deploy-frontend:
 #     docker:
