add to workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -333,8 +333,9 @@ workflows:
       - configure-infrastructure:
           context: env_vars
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          context: env_vars
+          requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
