--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -8,11 +8,21 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+    environment:
+          TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+          TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+          TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+          TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+          TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+          TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+          TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS') }}"
+          TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
+
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-      wait_for_connection:
-        timeout: 600
+      pause:
+        seconds: 600
 
     - name: "install python for Ansible."
       raw: 'sudo apt-get -y install python'
