--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -5,9 +5,9 @@
   user: ubuntu
   gather_facts: false
   vars:
-    - ansible_python_interpreter: /usr/bin/python3
-    - ansible_host_key_checking: false
-    - ansible_stdout_callback: yaml
+      ansible_python_interpreter: /usr/bin/python3
+      ansible_host_key_checking: false
+      ansible_stdout_callback: yaml
       environment:
             TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
             TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
