--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,6 +191,7 @@ jobs:
           environment:
             ANSIBLE_HOST_KEY_CHECKING: False
           command: |
+            echo $ANSIBLE_HOST_KEY_CHECKING
             ansible-playbook -i /tmp/.circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
       - destroy-environment
       # Here's where you will add some code to rollback on failure      
