--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,22 +165,14 @@ jobs:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            apk add curl
-            apk add --no-cache \
-                python3 \
-                py3-pip \
-            && pip3 install --upgrade pip \
-            && pip3 install \
-                awscli \
-            && rm -rf /var/cache/apk/*
-            apk add --update ansible
-      - add_ssh_keys:
-          fingerprints: ["31:7d:61:29:9e:01:a6:b0:ab:50:9e:aa:87:7a:25:e6"]
       - attach_workspace:
           at: /tmp/.circleci/ansible
+      - add_ssh_keys:
+          fingerprints: ["31:7d:61:29:9e:01:a6:b0:ab:50:9e:aa:87:7a:25:e6"]
+      - run:
+          name: install dependencies
+          command: 
+            apk add --update ansible
       - run:
           name: Checkout ws
           command: |
