--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,7 @@ jobs:
           name: Add back-end ip to ansible inventory
           command: |
             aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-{CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
@@ -185,7 +186,6 @@ jobs:
           command: |
             ansible-playbook -i /tmp/.circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
       - destroy-environment
-      # Here's where you will add some code to rollback on failure      
 
   run-migrations:
     docker:
@@ -196,6 +196,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            npm install
             npm run premigrations
             npm run migrations
             npm run migrations-win
