--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ jobs:
           root: .circleci/ansible
           paths:
             - inventory.txt
-      - destroy-environment  
+      # - destroy-environment  
 
   configure-infrastructure:
     docker:
