--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,7 +197,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations
+            npm run migrations > migrations.txt
       - run:
           name: Send migration results to memstash
           command: |
