--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,11 +198,11 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations.txt
+            cat migrations.txt
       - run:
           name: Send migration results to memstash
           command: |
-            # Your code here
-            exit 1
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" --request PUT --data "1" https://api.memstash.io/values/${CIRCLE_WORKFLOW_ID:0:7}
       #- destroy-environment
 
 #   deploy-frontend:
