--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,8 +331,9 @@ workflows:
       - run-migrations:
           context: env_vars
           requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
+      - deploy-frontend:
+          context: env_vars
+          requires: [run-migrations]
       # - deploy-backend:
       #     requires: [run-migrations]
       # - smoke-test:
