--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,10 +218,10 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            BACKEND_IP = aws ec2 describe-instances \
+            export BACKEND_IP = $(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text
+              --output text)
             echo "${BACKEND_IP}"
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
@@ -229,7 +229,7 @@ jobs:
           name: Deploy frontend objects
           command: |
             # your code here
-      # Here's where you will add some code to rollback on failure      
+      - destroy-environment
                     
 #   deploy-backend:
 #     docker:
