--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,6 +198,10 @@ jobs:
             cd backend
             npm install
             npm run migrations >> migrations.txt
+      - run:
+          name: Test
+          command: |
+            cd backend
             echo 'DISPLAY CONTENTS'
             echo '-----------------'
             cat migrations.txt
