--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -9,10 +9,9 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
  
-  # pre_tasks:
-  #   - name: "wait 600 seconds for target connection to become reachable/usable."
-  #     pause:
-  #       seconds: 120
+  pre_tasks:
+    - name: "wait 30 seconds for target connection to become reachable/usable."
+      shell: sleep 30
 
   roles:
     - configure-server
