--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,7 +199,7 @@ jobs:
             npm install
             npm run migrations >> migrations.txt
       - run:
-          name: Test
+          name: Check migration.txt
           command: |
             cd backend
             echo 'DISPLAY CONTENTS'
@@ -209,8 +209,15 @@ jobs:
       - run:
           name: Send migration results to memstash
           command: |
-            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" --request PUT --data "1" https://api.memstash.io/values/${CIRCLE_WORKFLOW_ID:0:7}
-      #- destroy-environment
+            cd backend
+            if grep -q "has been executed successfully" migrations.txt;then
+              echo "Migration successful !"
+              MIGRATION=1
+            else
+              echo "User does not exist :("
+              MIGRATION=1
+            fi
+            curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" --request PUT --data "${MIGRATION}" https://api.memstash.io/values/${CIRCLE_WORKFLOW_ID:0:7}
 
   deploy-frontend:
     docker:
@@ -261,6 +268,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm run build
             npm audit fix --audit-level=critical --force
       - run:
           name: Deploy backend
