--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ commands:
           command: |
             aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force  
 
 
   revert-migrations:
@@ -199,7 +200,7 @@ jobs:
             npm install
             npm run migrations >> migrations.txt
       - run:
-          name: Check migration.txt
+          name: Check migrations.txt
           command: |
             cd backend
             echo 'DISPLAY CONTENTS'
@@ -212,9 +213,6 @@ jobs:
             cd backend
             if grep -q "has been executed successfully" migrations.txt;then
               echo "Migration successful !"
-              MIGRATION=1
-            else
-              echo "User does not exist :("
               MIGRATION=1
             fi
             curl -H "Content-Type: text/plain" -H "token: ${CIRCLE_WORKFLOW_ID:0:7}" --request PUT --data "${MIGRATION}" https://api.memstash.io/values/${CIRCLE_WORKFLOW_ID:0:7}
@@ -273,7 +271,7 @@ jobs:
       - run:
           name: Deploy backend
           command: |
-            # your code here
+            ansible-playbook -i /tmp/.circleci/ansible/inventory.txt .circleci/ansible/deploy.yml
       # Here's where you will add some code to rollback on failure  
 
 #   smoke-test:
@@ -362,8 +360,9 @@ workflows:
       - deploy-frontend:
           context: env_vars
           requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
+      - deploy-backend:
+          context: env_vars
+          requires: [run-migrations]
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
