--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,42 +1,31 @@
 ---
-- name: "update apt packages."
-  become: yes
-  apt:
-    update_cache: yes
 
-- name: "upgrade packages"
-  become: yes
-  apt:
-    upgrade: yes
-
-- name: remove dependencies that are no longer required
-  become: yes
-  apt:
-    autoremove: yes
-
-- name: "install dependencies."
-  become: yes
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
-
-- name: Ansible copy file to remote server
+- name: Copy backend dist files to remote server
   copy:
-    src: /root/project/backend/dist
+    src: /root/project/backend
     dest: /home/ubuntu
 
-- name: "install pm2"
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
+- name: Install Node modules
+  shell: |
+    cd /home/ubuntu/backend
+    ls -la
+    printenv
+    npm install
 
+- name: building node services
+  shell: |
+    cd /home/ubuntu/backend
+    npm run build
+    npm run prestart:prod
+
+- name: "run migrations again"
+  shell: |
+    cd /home/ubuntu/backend
+    npm run migrations
+    
 - name: Executing node
   become: true
   shell: |
-    cd /home/ubuntu/backend
+    cd /home/ubuntu/backend 
     pm2 start npm --name backend -- start
     pm2 ls
