--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -8,5 +8,10 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+
+  pre_tasks:
+    - name: "wait 30 seconds for target connection to become reachable/usable."
+      shell: sleep 60
+
   roles:
     - deploy
