--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,7 +295,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # your code here
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" unzip awscliv2.zip
+            sudo ./aws/install
       - run:
           name: Get backend url
           command: |
