--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,9 +295,9 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get install curl
+            apk --no-cache add curl
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" unzip awscliv2.zip
-            sudo ./aws/install
+            ./aws/install
       - run:
           name: Get backend url
           command: |
