--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,9 +295,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk --no-cache add curl
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" unzip awscliv2.zip
-            ./aws/install
+            apk add --update curl nodejs npm
+            pip install awscli
       - run:
           name: Get backend url
           command: |
