--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -394,6 +394,7 @@ workflows:
           context: env_vars
           requires: [run-migrations]
       - smoke-test:
+          context: env_vars
           requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
