--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,8 +280,7 @@ jobs:
       - run:
           name: install dependencies
           command: 
-            apk add --update ansible
-            apk add --update curl nodejs npm
+            apk add --update ansible curl nodejs npm
             pip install awscli
       - run:
           name: Deploy backend
