--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -403,7 +403,8 @@ workflows:
       - smoke-test:
           context: env_vars
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
+      - cloudfront-update:
+          context: env_vars
+          requires: [smoke-test]
       # - cleanup:
       #     requires: [cloudfront-update]
